# sm64br_discord_bot

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  vcpkg.json
sample/: database.json  discord_server.json  google_oauth_client_secret.json  settings.json
samples/: server_database.json
src/: main.cc
src/bot/: defs.h  sm64br_discord_bot.cc  sm64br_discord_bot.h
src/bot/database/: database.cc  database.h  server_database.cc  server_database.h
src/bot/message/: message_handler.cc  message_handler.h
src/bot/message_handler/: message_handler.cc  message_handler.h
src/bot/settings/: settings.cc  settings.h
src/bot/the_run/: payload_parser.cc  payload_parser.h  the_run.cc  the_run.h
src/google_sheets/: google_sheets.cc  google_sheets.h
src/logger/: logger.cc  logger.h  logger_factory.cc  logger_factory.h
src/sentry/: sentry.cc  sentry.h
src/utils/: file_utils.cc  file_utils.h
toolchains/: rpi5.cmake
